# michelin-guide

./: .gitignore  Dockerfile  README.md  crud.py  data.pkl  database.py  docker-compose.yaml  init_data.py  load_michelin_guide_data.py  main.py  models.py  pyproject.toml  sql_app.db  test.py
data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--4826871634571089322.wt  collection-0-1473938961530732173.wt  collection-2--4826871634571089322.wt  collection-2-1473938961530732173.wt  collection-4--4826871634571089322.wt  collection-4-1473938961530732173.wt  collection-7--4826871634571089322.wt  collection-7-1473938961530732173.wt  collection-9--4826871634571089322.wt  index-1--4826871634571089322.wt  index-1-1473938961530732173.wt  index-10--4826871634571089322.wt  index-3--4826871634571089322.wt  index-3-1473938961530732173.wt  index-5--4826871634571089322.wt  index-5-1473938961530732173.wt  index-6--4826871634571089322.wt  index-6-1473938961530732173.wt  index-8--4826871634571089322.wt  index-8-1473938961530732173.wt  sizeStorer.wt
data/diagnostic.data/: metrics.2022-11-13T02-55-52Z-00000  metrics.2022-11-13T04-06-32Z-00000  metrics.2022-11-13T08-49-16Z-00000  metrics.interim
schemas/: michelin_data.py  michelin_guide_request.py  michelin_guide_response.py  michelin_website_response.py  parsed_michelin_website_response.py
scripts/: get_data.py  init_data.py  init_michelin_guide_data.py  michelin_guide_data.py  michelin_guide_request.py  michelin_guide_response.py  parse_data.py
