[tool.poetry]
name = "michelin-guide"
version = "0.1.0"
description = ""
authors = ["roycehoe <royceinbox@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pydantic = "^1.10.2"
black = "^22.10.0"
SQLAlchemy = "^1.4.43"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
