[tool.poetry]
name = "michelin-guide"
version = "0.1.0"
description = ""
authors = ["roycehoe <royceinbox@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.43"
pymongo = "^4.3.2"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
